--- a/guide_content/_redirects/404.html
+++ b/guide_content/_redirects/404.html
@@ -4,9 +4,9 @@
     <meta http-equiv="content-type" content="text/html; charset=UTF-8" />
     <title>Redirecting to new domain</title>
     <script>
-      // Extract the requested path from the URL and remove the "/test-redirect/" subdirectory
+      // Extract the requested path from the URL and remove the "/test-aem-redirect/" subdirectory
       var requestedPath = window.location.pathname.replace(
-        /^\/test-redirect/,
+        /^\/test-aem-redirect/,
         ""
       );
 
