--- a/guide_content/_redirects/404.html
+++ b/guide_content/_redirects/404.html
@@ -81,16 +81,16 @@
       // Find alias in object, or alias minus a trailing slash
       if (aliases[requestedPath]) {
         window.location.replace(
-          "https://twitter.github.io/communitynotes" + aliases[requestedPath]
+          "https://communitynotes.twitter.com/guide" + aliases[requestedPath]
         );
       } else if (aliases[requestedPath.slice(0, -1)]) {
         window.location.replace(
-          "https://twitter.github.io/communitynotes" +
+          "https://communitynotes.twitter.com/guide" +
             aliases[requestedPath.slice(0, -1)]
         );
       } else {
         window.location.replace(
-          "https://twitter.github.io/communitynotes" + requestedPath
+          "https://communitynotes.twitter.com/guide" + requestedPath
         );
       }
     </script>
